# wiggler

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  alea.code-workspace  eslint.config.js  package.json  tsconfig.json  wrangler.toml
deploy/systemd/: wiggler.service
doc/: APP_HANDOFF_FOR_CHATGPT.md  CLI.md  CODING_CONVENTIONS.md  DASHBOARDS.md  DOCUMENTATION.md  DRY_TRADING.md  EXECUTION.md  HOW_TO_WORK_WITH_NICK.md  LATENCY_EXPERIMENT.md  LIVE_MONITORING.md  MARKET_CAPTURE.md  OPERATIONS.md  POLYMARKET.md  PRICE_CAPTURE_EXPERIMENT.md  RELIABILITY_EXPERIMENT.md  RUNTIME_BUNDLE.md  STACK.md  TELEGRAM.md  TEMP_DASHBOARDS.md  TRADING.md  TRAINING.md  TRAINING_DOMAIN.md
doc/research/: 2026-05-04-atr-period-and-compound-sweep.md  2026-05-04-filter-archive.md  2026-05-04-filter-scoring-overhaul.md  2026-05-04-sample-floor.md  2026-05-04-sweet-spot.md  2026-05-05-overnight-dry-run-iteration.md  README.md  indicator-overlay-sweep.md
examples/: address_probe.rs  auth_manual.rs  l2_probe.rs
runtime/wiggler-prod-v1/: BTC_300s_boundary.runtime.json  CODEX_IMPLEMENTATION_INSTRUCTIONS.md  DOGE_300s_boundary.runtime.json  ETH_300s_boundary.runtime.json  README.md  SOL_300s_boundary.runtime.json  XRP_300s_boundary.runtime.json  wiggler-runtime-manifest.json
src/: cli.rs  config.rs  doctor.rs  lib.rs  logging.rs  main.rs  monitor.rs  telegram.rs  trade_analysis.rs
src/constants/: assets.ts  candles.ts  env.ts  exchanges.ts  liveTrading.ts  polymarket.ts  products.ts  sources.ts  trading.ts  training.ts
src/domain/: asset.rs  decimal.rs  market.rs  mod.rs  orderbook.rs  time.rs
src/exchange_candles/: binance.rs  coinbase.rs  feed.rs  mod.rs  store.rs  types.rs
src/monitor/: decision.rs  execution.rs  formatting.rs  live_exposure_reconcile.rs  live_tracking.rs  logic.rs  path.rs  settlement.rs  settlement_fetch.rs  skip.rs  state.rs  telegram_outbox.rs  tests.rs  trades.rs  watchset.rs
src/polymarket/: data.rs  gamma.rs  market_ws.rs  mod.rs  rtds.rs  serde_helpers.rs  user_ws.rs
src/runtime/: bundle.rs  mod.rs  vol.rs
src/trade_analysis/: analysis.rs  (+4 more)
tools/: runtime_tables.ts  sync_5m_candles.ts
(+342 files in other folders)
